--- a/public/index/css/style.css
+++ b/public/index/css/style.css
@@ -8399,6 +8399,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: 2px; }
 
 .hero-wrap {
+  font-family: Great Vibes;
   width: 100%;
   height: 100%;
   position: inherit;
@@ -8423,8 +8424,8 @@ h1, h2, h3, h4, h5,
         font-weight: 900;
         color: #fff; }
       .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs {
-        text-transform: uppercase;
-        font-size: 13px;
+        text-transform: capitalize;
+        font-size: 20px;
         letter-spacing: 1px; }
         .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span {
           color: #fff;
